# policy

./: Cargo.toml  PHILOSOPHY.md  README.md  deny.toml
.github/workflows/: cargo-deny.yml  rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: email_basic.rs  security_basic.rs
src/: email.rs  error.rs  lib.rs  policy.rs  semver.rs
src/policy/: security.rs
