[package]
name = "policy"
version = "0.0.0-202301.Jan.22"
edition = "2021"
rust-version = "1.60.0"
authors = ["pinkforest"]
description = "Rust Policy Framework"
license = "Apache-2.0/MIT"
readme = "README.md"
homepage = "https://github/policy-rs/policy"
repository = "https://github/policy-rs/policy"
documentation = "https://docs.rs/policy"
keywords = ["policy"]

[features]
default = ["std"]
std = ["semver/std"]

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
semver = { version = "1.0", default-features = false }
# TODO: This is a mess still -
#  Make portable no_std/std regex off-crate that
# https://github.com/rust-lang/regex/issues/476
# https://github.com/rust-lang/regex/pull/477
#[target.'cfg(feature = "std")'.dependencies]
#regex = { version = "1.7", default-features = false, features = ["std"] }
#[target.'cfg(not(feature = "std"))'.dependencies]
# For now just use safe-regex that doesn't insist on std
safe-regex = { version = "0.2", default-features = false }
