[package]
name = "policy"
version = "0.0.0-202301.Jan.22"
edition = "2021"
rust-version = "1.60.0"
authors = ["pinkforest"]
description = "Rust Policy Framework"
license = "Apache-2.0/MIT"
readme = "README.md"
homepage = "https://github/policy-rs/policy"
repository = "https://github/policy-rs/policy"
documentation = "https://docs.rs/policy"
keywords = ["policy"]

[features]
default = ["std"]
# email type
email = []
std = ["semver?/std"]
# Security Policy
security = ["dep:semver", "dep:safe-regex", "email"]
semver = ["dep:semver"]
#TODO: semver isn't std friendly ?
#TODO: serde!+/std
#TODO: nom+/std

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
semver = { version = "1.0", optional = true, default-features = false }
# TODO: This is a mess still -
#  Make portable no_std/std regex off-crate that
# https://github.com/rust-lang/regex/issues/476
# https://github.com/rust-lang/regex/pull/477
#[target.'cfg(feature = "std")'.dependencies]
#regex = { version = "1.7", default-features = false, features = ["std"] }
#[target.'cfg(not(feature = "std"))'.dependencies]
safe-regex = { version = "0.2", optional = true, default-features = false }
# TODO: when we grow up let's nom:
#nom = { version = "7.1", default-features = false }

[dev-dependencies]
rstest = "0.16"
